--- a/coursComplited.html
+++ b/coursComplited.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Curses web-page" />
-    <title>Курс завершён</title>
-    <link rel="stylesheet" href="./pages/index.css" />
-  </head>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Curses web-page" />
+  <title>Курс завершён</title>
+  <link rel="stylesheet" href="./pages/index.css" />
+</head>
+
 
 <body class="page">
 
@@ -81,32 +83,32 @@
             <button class="accordion__button" type="button" aria-label="Открыть">
               <h3 class="accordion__title">1. В каких случаях перспективно применение следовых кинологических расчётов</h3>
               <div class="accordion__icon-wrapper">
-                <img class="accordion__icon" src="./images/accordion_icon.svg">
+                <img class="accordion__icon" src="./images/accordion_icon.svg" alt="icon">
               </div> 
             </button>
             <div class="accordion__body">
               <ul class="accordion__list">
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg">
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
                   <p class="accordion__text">Урок</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg">
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
                   <p class="accordion__text">Видео</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg">
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
                   <p class="accordion__text">Урок</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg">
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
                   <p class="accordion__text">Вебинар</p>
                 </li>
                 <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg">
+                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
                   <p class="accordion__text">Тест</p>
                 </li>
-              </ul>         
+              </ul>  
             </div>
         </div>
         <div class="accordion">
@@ -115,160 +117,162 @@
               (розыскных собак)</h3>
             <div class="accordion__icon-wrapper">
               <img class="accordion__icon" src="./images/accordion_icon.svg" alt="icon">
-            </div> 
-            </button>
-            <div class="accordion__body">
-              <ul class="accordion__list">
-                <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg">
-                  <p class="accordion__text">Урок</p>
-                </li>
-                <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg">
-                  <p class="accordion__text">Вебинар</p>
-                </li>
-                <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg">
-                  <p class="accordion__text">Урок</p>
-                </li>
-                <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg">
-                  <p class="accordion__text">Видео</p>
-                </li>
-                <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg">
-                  <p class="accordion__text">Тест</p>
-                </li>
-              </ul>         
             </div>
+          </button>
+          <div class="accordion__body">
+            <ul class="accordion__list">
+              <li class="accordion__item">
+                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                <p class="accordion__text">Урок</p>
+              </li>
+              <li class="accordion__item">
+                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                <p class="accordion__text">Вебинар</p>
+              </li>
+              <li class="accordion__item">
+                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                <p class="accordion__text">Урок</p>
+              </li>
+              <li class="accordion__item">
+                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                <p class="accordion__text">Видео</p>
+              </li>
+              <li class="accordion__item">
+                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                <p class="accordion__text">Тест</p>
+              </li>
+            </ul>
           </div>
-          <div class="accordion">
-            <button class="accordion__button">
-              <h3 class="accordion__title">3. Особенности привлечения следовых расчётов на ПСР и особенности взаимодействия</h3>
-              <div class="accordion__icon-wrapper">
-                <img class="accordion__icon accordion__icon_open" src="./images/accordion_icon.svg">
-              </div> 
-            </button>
-            <div class="accordion__body accordion__body_open">
-              <ul class="accordion__list">
-                <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg">
-                  <p class="accordion__text">Урок</p>
-                </li>
-                <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg">
-                  <p class="accordion__text">Вебинар</p>
-                </li>
-                <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg">
-                  <p class="accordion__text">Урок</p>
-                </li>
-                <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg">
-                  <p class="accordion__text">Видео</p>
-                </li>
-                <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg">
-                  <p class="accordion__text">Тест</p>
-                </li>
-              </ul>         
+        </div>
+        <div class="accordion">
+          <button class="accordion__button" type="button" aria-label="Открыть">
+            <h3 class="accordion__title">3. Особенности привлечения следовых расчётов на ПСР и особенности
+              взаимодействия</h3>
+            <div class="accordion__icon-wrapper">
+              <img class="accordion__icon accordion__icon_open" src="./images/accordion_icon.svg" alt="icon">
             </div>
+          </button>
+          <div class="accordion__body accordion__body_open">
+            <ul class="accordion__list">
+              <li class="accordion__item">
+                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                <p class="accordion__text">Урок</p>
+              </li>
+              <li class="accordion__item">
+                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                <p class="accordion__text">Вебинар</p>
+              </li>
+              <li class="accordion__item">
+                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                <p class="accordion__text">Урок</p>
+              </li>
+              <li class="accordion__item">
+                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                <p class="accordion__text">Видео</p>
+              </li>
+              <li class="accordion__item">
+                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                <p class="accordion__text">Тест</p>
+              </li>
+            </ul>
           </div>
-          <div class="accordion">
-            <button class="accordion__button">
-              <h3 class="accordion__title">4. Корректная постановка задачи кинологу и особенности её исполнения</h3>
-              <div class="accordion__icon-wrapper">
-                <img class="accordion__icon accordion__icon_open" src="./images/accordion_icon.svg">
-              </div> 
-            </button>
-            <div class="accordion__body accordion__body_open">
-              <ul class="accordion__list">
-                <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg">
-                  <p class="accordion__text">Вебинар</p>
-                </li>
-              </ul>         
+        </div>
+        <div class="accordion">
+          <button class="accordion__button" type="button" aria-label="Открыть">
+            <h3 class="accordion__title">4. Корректная постановка задачи кинологу и особенности её исполнения</h3>
+            <div class="accordion__icon-wrapper">
+              <img class="accordion__icon accordion__icon_open" src="./images/accordion_icon.svg" alt="icon">
             </div>
+          </button>
+          <div class="accordion__body accordion__body_open">
+            <ul class="accordion__list">
+              <li class="accordion__item">
+                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                <p class="accordion__text">Вебинар</p>
+              </li>
+            </ul>
           </div>
-          <div class="accordion">
-            <button class="accordion__button">
-              <h3 class="accordion__title">5. Работа «второго номера» совместно со следовым кинологическим расчётом</h3>
-              <div class="accordion__icon-wrapper">
-                <img class="accordion__icon accordion__icon_open" src="./images/accordion_icon.svg">
-              </div> 
-            </button>
-            <div class="accordion__body accordion__body_open">
-              <ul class="accordion__list">
-                <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg">
-                  <p class="accordion__text">Дрессировка поисково-спасательных собак</p>
-                </li>
-                <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg">
-                  <p class="accordion__text">Вебинар</p>
-                </li>
-                <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg">
-                  <p class="accordion__text">Урок</p>
-                </li>
-                <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg">
-                  <p class="accordion__text">Видео</p>
-                </li>
-                <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg">
-                  <p class="accordion__text">Тест</p>
-                </li>
-              </ul>         
+        </div>
+        <div class="accordion">
+          <button class="accordion__button" type="button" aria-label="Открыть">
+            <h3 class="accordion__title">5. Работа «второго номера» совместно со следовым кинологическим расчётом</h3>
+            <div class="accordion__icon-wrapper">
+              <img class="accordion__icon accordion__icon_open" src="./images/accordion_icon.svg" alt="icon">
             </div>
+          </button>
+          <div class="accordion__body accordion__body_open">
+            <ul class="accordion__list">
+              <li class="accordion__item">
+                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                <p class="accordion__text">Дрессировка поисково-спасательных собак</p>
+              </li>
+              <li class="accordion__item">
+                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                <p class="accordion__text">Вебинар</p>
+              </li>
+              <li class="accordion__item">
+                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                <p class="accordion__text">Урок</p>
+              </li>
+              <li class="accordion__item">
+                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                <p class="accordion__text">Видео</p>
+              </li>
+              <li class="accordion__item">
+                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                <p class="accordion__text">Тест</p>
+              </li>
+            </ul>
           </div>
-          <div class="accordion">
-            <button class="accordion__button">
-              <h3 class="accordion__title">6. Оценка качества и особенности анализа результата проделанной следовым кинологическим расчётом работы</h3>
-              <div class="accordion__icon-wrapper">
-                <img class="accordion__icon" src="./images/accordion_icon.svg">
-              </div> 
-            </button>
-            <div class="accordion__body">
-              <ul class="accordion__list">
-                <li class="accordion__item">
-                  <img class="menu__icon" src="./images/lesson-icon.svg">
-                  <p class="accordion__text">Урок</p>
-                </li>
-                <li class="accordion__item">
-                  <img class="menu__icon" src="./images/webinar-icon.svg">
-                  <p class="accordion__text">Вебинар</p>
-                </li>
-                <li class="accordion__item">
-                  <img class="menu__icon" src="./images/video-icon.svg">
-                  <p class="accordion__text">Видео</p>
-                </li>
-                <li class="accordion__item">
-                  <img class="menu__icon" src="./images/test-icon.svg">
-                  <p class="accordion__text">Тест</p>
-                </li>
-              </ul>         
+        </div>
+        <div class="accordion">
+          <button class="accordion__button" type="button" aria-label="Открыть">
+            <h3 class="accordion__title">6. Оценка качества и особенности анализа результата проделанной следовым
+              кинологическим расчётом работы</h3>
+            <div class="accordion__icon-wrapper">
+              <img class="accordion__icon" src="./images/accordion_icon.svg" alt="icon">
             </div>
+          </button>
+          <div class="accordion__body">
+            <ul class="accordion__list">
+              <li class="accordion__item">
+                <img class="menu__icon" src="./images/lesson-icon.svg" alt="icon">
+                <p class="accordion__text">Урок</p>
+              </li>
+              <li class="accordion__item">
+                <img class="menu__icon" src="./images/webinar-icon.svg" alt="icon">
+                <p class="accordion__text">Вебинар</p>
+              </li>
+              <li class="accordion__item">
+                <img class="menu__icon" src="./images/video-icon.svg" alt="icon">
+                <p class="accordion__text">Видео</p>
+              </li>
+              <li class="accordion__item">
+                <img class="menu__icon" src="./images/test-icon.svg" alt="icon">
+                <p class="accordion__text">Тест</p>
+              </li>
+            </ul>
           </div>
-          <div class="accordion">
-            <button class="accordion__button">
-              <h3 class="accordion__title">7. Особенности и пределы использования РПРС ом полученной в ходе применения специальной следовой собаки информации в целях успешного разрешения поисков</h3>
-              <div class="accordion__icon-wrapper">
-                <img class="accordion__icon" src="./images/accordion_icon.svg">
-              </div> 
-            </button>
-            <div class="accordion__body">
-              <ul class="accordion__list">
-                <li class="accordion__item">
-                  <img class="menu__icon" src="./images/webinar-icon.svg">
-                  <p class="accordion__text">Вебинар</p>
-                </li>
-                <li class="accordion__item">
-                  <img class="menu__icon" src="./images/test-icon.svg">
-                  <p class="accordion__text">Тест</p>
-                </li>
-              </ul>         
+        </div>
+        <div class="accordion">
+          <button class="accordion__button" type="button" aria-label="Открыть">
+            <h3 class="accordion__title">7. Особенности и пределы использования РПРС ом полученной в ходе применения
+              специальной следовой собаки информации в целях успешного разрешения поисков</h3>
+            <div class="accordion__icon-wrapper">
+              <img class="accordion__icon" src="./images/accordion_icon.svg" alt="icon">
             </div>
+          </button>
+          <div class="accordion__body">
+            <ul class="accordion__list">
+              <li class="accordion__item">
+                <img class="menu__icon" src="./images/webinar-icon.svg" alt="icon">
+                <p class="accordion__text">Вебинар</p>
+              </li>
+              <li class="accordion__item">
+                <img class="menu__icon" src="./images/test-icon.svg" alt="icon">
+                <p class="accordion__text">Тест</p>
+              </li>
+            </ul>
           </div>
         </div>
       </section>
@@ -276,4 +280,5 @@
   </main>
   <script src="./scripts/accordion.js"></script>
 </body>
+
 </html>
