--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <!-- Обёртка для того что бы флексануть колонки-->
 
       <section class="container">
-        <div class="content">
+        <div class="content content_visible">
           <div class="content__header">
             <p class="content__title">Видео</p>
           </div>
@@ -75,9 +75,9 @@
         <div class="navigation">
           <!-- Для того, чтобы сделать кнопку неактивной, нужно убрать модификатор цвета и добавить модификатор button_disabled -->
           <button type="button" class="button button_color_white navigation__button"
-            aria-label="Назад">&larr;&nbsp;&nbsp;
+            aria-label="Назад" name="back-bnt">&larr;&nbsp;&nbsp;
             Назад</button>
-          <button type="button" class="button button_color_orange navigation__button" aria-label="Далее">Далее
+          <button type="button" class="button button_color_orange navigation__button" name="next-btn" aria-label="Далее">Далее
             &nbsp;&nbsp;&rarr;</button>
         </div>
       </section>
