video play/pause JS

--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
             <p class="content__title">Видео</p>
           </div>
           <div class="content__video">
-            <video class="video" title="" poster="./images/thumbnail.jpeg">
-              <source src="">
+            <video class="video" poster="./images/thumbnail.jpeg" src="https://pictures.s3.yandex.net/iframes_topic/1.mp4">
             </video>
             <div class="video__controls">
               <button id="play" class="video__button">
