--- a/coursComplited.html
+++ b/coursComplited.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Curses web-page" />
   <title>Курс завершён</title>
-  <link rel="stylesheet" href="./pages/index.css" />
+  <link rel="stylesheet" href="./pages/coursComplited.css" />
 </head>
 
 
