--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Curses web-page" />
   <title>Тест</title>
-  <link rel="stylesheet" href="./pages/index.css" />
+  <link rel="stylesheet" href="./pages/test.css" />
 </head>
 
 <body class="page">
