--- a/coursComplited.html
+++ b/coursComplited.html
@@ -80,36 +80,37 @@
       <section class="aside">
         <h2 class="aside__title">Содержание</h2>
         <div class="accordion">
-            <button class="accordion__button" type="button" aria-label="Открыть">
-              <h3 class="accordion__title">1. В каких случаях перспективно применение следовых кинологических расчётов</h3>
-              <div class="accordion__icon-wrapper">
-                <img class="accordion__icon" src="./images/accordion_icon.svg" alt="icon">
-              </div> 
-            </button>
-            <div class="accordion__body">
-              <ul class="accordion__list">
-                <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
-                  <p class="accordion__text">Урок</p>
-                </li>
-                <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
-                  <p class="accordion__text">Видео</p>
-                </li>
-                <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
-                  <p class="accordion__text">Урок</p>
-                </li>
-                <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
-                  <p class="accordion__text">Вебинар</p>
-                </li>
-                <li class="accordion__item">
-                  <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
-                  <p class="accordion__text">Тест</p>
-                </li>
-              </ul>  
+          <button class="accordion__button" type="button" aria-label="Открыть">
+            <h3 class="accordion__title">1. В каких случаях перспективно применение следовых кинологических расчётов
+            </h3>
+            <div class="accordion__icon-wrapper">
+              <img class="accordion__icon" src="./images/accordion_icon.svg" alt="icon">
             </div>
+          </button>
+          <div class="accordion__body">
+            <ul class="accordion__list">
+              <li class="accordion__item">
+                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                <p class="accordion__text">Урок</p>
+              </li>
+              <li class="accordion__item">
+                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                <p class="accordion__text">Видео</p>
+              </li>
+              <li class="accordion__item">
+                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                <p class="accordion__text">Урок</p>
+              </li>
+              <li class="accordion__item">
+                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                <p class="accordion__text">Вебинар</p>
+              </li>
+              <li class="accordion__item">
+                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
+                <p class="accordion__text">Тест</p>
+              </li>
+            </ul>
+          </div>
         </div>
         <div class="accordion">
           <button class="accordion__button" type="button" aria-label="Открыть">
