--- a/test.html
+++ b/test.html
@@ -196,9 +196,7 @@
         <h2 class="aside__title">Содержание</h2>
         <div class="accordion">
           <button class="accordion__button" type="button" aria-label="Открыть">
-            <h3 class="accordion__title">
-              1. В каких случаях перспективно применение следовых
-              кинологических расчётов
+            <h3 class="accordion__title">1. В каких случаях перспективно применение следовых кинологических расчётов
             </h3>
             <div class="accordion__icon-wrapper">
               <img class="accordion__icon" src="./images/accordion_icon.svg" alt="icon">
@@ -231,10 +229,8 @@
         </div>
         <div class="accordion">
           <button class="accordion__button" type="button" aria-label="Открыть">
-            <h3 class="accordion__title">
-              2. Необходимые обеспечительные меры для успешного применения
-              следовых (розыскных собак)
-            </h3>
+            <h3 class="accordion__title">2. Необходимые обеспечительные меры для успешного применения следовых
+              (розыскных собак)</h3>
             <div class="accordion__icon-wrapper">
               <img class="accordion__icon" src="./images/accordion_icon.svg" alt="icon">
             </div>
@@ -266,10 +262,8 @@
         </div>
         <div class="accordion">
           <button class="accordion__button" type="button" aria-label="Открыть">
-            <h3 class="accordion__title">
-              3. Особенности привлечения следовых расчётов
-              на ПСР и особенности взаимодействия
-            </h3>
+            <h3 class="accordion__title">3. Особенности привлечения следовых расчётов на ПСР и особенности
+              взаимодействия</h3>
             <div class="accordion__icon-wrapper">
               <img class="accordion__icon accordion__icon_open" src="./images/accordion_icon.svg" alt="icon">
             </div>
@@ -301,10 +295,7 @@
         </div>
         <div class="accordion">
           <button class="accordion__button" type="button" aria-label="Открыть">
-            <h3 class="accordion__title">
-              4. Корректная постановка задачи кинологу и особенности
-              её исполнения
-            </h3>
+            <h3 class="accordion__title">4. Корректная постановка задачи кинологу и особенности её исполнения</h3>
             <div class="accordion__icon-wrapper">
               <img class="accordion__icon accordion__icon_open" src="./images/accordion_icon.svg" alt="icon">
             </div>
@@ -320,10 +311,7 @@
         </div>
         <div class="accordion">
           <button class="accordion__button" type="button" aria-label="Открыть">
-            <h3 class="accordion__title">
-              5. Работа «второго номера» совместно со следовым кинологическим
-              расчётом
-            </h3>
+            <h3 class="accordion__title">5. Работа «второго номера» совместно со следовым кинологическим расчётом</h3>
             <div class="accordion__icon-wrapper">
               <img class="accordion__icon accordion__icon_open" src="./images/accordion_icon.svg" alt="icon">
             </div>
@@ -332,9 +320,7 @@
             <ul class="accordion__list">
               <li class="accordion__item">
                 <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
-                <p class="accordion__text">
-                  Дрессировка поисково-спасательных собак
-                </p>
+                <p class="accordion__text">Дрессировка поисково-спасательных собак</p>
               </li>
               <li class="accordion__item">
                 <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
@@ -343,13 +329,13 @@
               <li class="accordion__item">
                 <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
                 <p class="accordion__text">Урок</p>
-              </li>
-              <li class="accordion__item">
-                <img class="menu__icon" src="./images/success_icon.svg" alt="icon">
-                <p class="accordion__text">Видео</p>
               </li>
               <li class="accordion__item accordion__item_active">
-                <img class="menu__icon" src="./images/test-icon-active.svg" alt="icon">
+                <img class="menu__icon" src="./images/video-icon-active.svg" alt="icon">
+                <p class="accordion__text">Видео</p>
+              </li>
+              <li class="accordion__item">
+                <img class="menu__icon" src="./images/test-icon.svg" alt="icon">
                 <p class="accordion__text">Тест</p>
               </li>
             </ul>
@@ -357,10 +343,8 @@
         </div>
         <div class="accordion">
           <button class="accordion__button" type="button" aria-label="Открыть">
-            <h3 class="accordion__title">
-              6. Оценка качества и особенности анализа результата проделанной
-              следовым кинологическим расчётом работы
-            </h3>
+            <h3 class="accordion__title">6. Оценка качества и особенности анализа результата проделанной следовым
+              кинологическим расчётом работы</h3>
             <div class="accordion__icon-wrapper">
               <img class="accordion__icon" src="./images/accordion_icon.svg" alt="icon">
             </div>
@@ -388,11 +372,8 @@
         </div>
         <div class="accordion">
           <button class="accordion__button" type="button" aria-label="Открыть">
-            <h3 class="accordion__title">
-              7. Особенности и пределы использования РПРС ом полученной в ходе
-              применения специальной следовой собаки информации в целях
-              успешного разрешения поисков
-            </h3>
+            <h3 class="accordion__title">7. Особенности и пределы использования РПРС ом полученной в ходе применения
+              специальной следовой собаки информации в целях успешного разрешения поисков</h3>
             <div class="accordion__icon-wrapper">
               <img class="accordion__icon" src="./images/accordion_icon.svg" alt="icon">
             </div>
