--- a/video.html
+++ b/video.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Curses web-page" />
   <title>Видео</title>
-  <link rel="stylesheet" href="./pages/index.css" />
+  <link rel="stylesheet" href="./pages/video.css" />
+  
 </head>
 
 <body class="page">
@@ -322,6 +323,7 @@
   </main>
   <script src="./scripts/script.js"></script>
   <script src="./scripts/accordion.js"></script>
+  <script src="./scripts/video.js"></script>
 </body>
 
 </html>
